--- a/overlay/LineageSDKOverlayPeridot/res/values/config.xml
+++ b/overlay/LineageSDKOverlayPeridot/res/values/config.xml
@@ -11,4 +11,7 @@
         <item>restart_fastboot</item>
         <item>restart_bootloader</item>
     </string-array>
+
+    <string name="config_customDozePackage" translatable="false">org.lineageos.settings/org.lineageos.settings.doze.DozeSettingsActivity</string>
+    
 </resources>
